# rams

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
docs/: repro.md
scripts/: eval_checkpoint.ps1  run_fewshot.ps1  synthesize.ps1
src/rams_absa/: cli.py  config.py  data.py  metrics.py  modeling.py  synthesis.py  trainer.py
